Bug 53860 - [regression] weston-desktop-shell crashes silently when an icon doesn't exist
Summary: [regression] weston-desktop-shell crashes silently when an icon doesn't exist
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-20 22:31 UTC by Brian Lovin
Modified: 2012-11-27 23:09 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Add error checking if icon surface is not created. (615 bytes, patch)
2012-08-27 22:07 UTC, Brian Lovin
Details | Splinter Review

Description Brian Lovin 2012-08-20 22:31:10 UTC
System Environment:
--------------------------
Distro: Ubuntu 12.04
Arch: x86_64
glproto master ec1eec4355ee4a6c5134f2178192f10b6d28a87a
mesa master 926a4a922f9a5ec397cb3d316dd915b00b39c54d
wayland master c855d6eec4c5e63489da5bc08451a2376e6d2aea
pixman master 09cb1ae10b1976970233c934d27c36e0a4203e1c
weston master 5418a904ca007a109f6af8c0c75ca97a134986d9
drm master 3163cfe4db925429760407e77140e2d595338bc2
cairo master 30d09cd33a582a2dd3f3a544366892c724f67592
libX11 master 8042f88ace33573f9d0dfaa21ed54ac7cef266d5
macros master 0890e4003aacfa7113ab3f4e3ad7c5636f8e922a
libxkbcommon master f491285a5f4b5f680a87e9e3076e8499f3ed2a3b
dri2proto master 4eeacce4c4a300b938b7e3fb78a8e443c491780b
kbproto master 391a1f6de6315fc0196d407d800597488315cccb



Detailed Description:
-----------------------------
Edit weston.ini to add a launcher with an icon which doesn't exist. ex:
[launcher]
icon=/lol/notexist.png
path=/usr/bin/gnome-terminal

When one attempts to launch weston with this configuration there are no warnings about a bad image file or otherwise - weston attempts to start the shell over and over and eventually stops retrying.

Also trying to launch it as a user results in failure, I read somewhere that weston itself is the only process that can launch the shell - this makes figuring out why the shell isn't working rather hard (which is the only reason I'm submitting this bug)

Steps to Reproduce:
----------------------------
1. Edit weston.ini file like above
2. launch weston
3. Observe output of attempting to launch the desktop shell and eventual failure, weston itself just shows up completely black.
Comment 1 U. Artie Eoff 2012-08-27 21:41:32 UTC
This is actually a regression (title adjusted accordingly).  I just recently started having this problem, too, because I don't have google chrome installed and the default weston.ini defines a launcher that uses the google chrome icon.  It used to ignore invalid launchers of this type, but now I'm seeing this issue.
Comment 2 Brian Lovin 2012-08-27 22:07:54 UTC
Created attachment 66194 [details] [review]
Add error checking if icon surface is not created.

If Weston can't (or shouldn't) function as it did before - that is fail silently and just not show any icon then we can use this quick and dirty patch to at least tell people why Wston is acting strange...
Comment 3 Philipp Brüschweiler 2012-08-30 11:58:46 UTC
Fixed in 467668c9a47b2bbe6d927e9679dafca61ffb324b
Comment 4 Brian Lovin 2012-11-27 23:09:26 UTC
Changing to verified


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.